# fastapi-vibeops-template

./: .env.example  AGENTS.md  LICENSE  Makefile  README.md  alembic.ini  conftest.py  pyproject.toml
.claude/: settings.local.json
.claude/skills/migrations/: SKILL.md
.claude/skills/vibeops-skill/: SKILL.md
alembic/: env.py
alembic/versions/: 0001_create_users_table.py
skills/: auth.md  crud.md  migrations.md  testing.md
skills/auth/: SKILL.md
skills/testing/: SKILL.md
specs/: auth.md
src/: main.py
src/api/: dependencies.py
src/api/v1/: router.py
src/api/v1/endpoints/: auth.py
src/app/: database.py  main.py
src/app/core/: config.py
src/app/models/: user.py
src/app/repositories/: user.py
src/app/routers/: users.py
src/app/schemas/: user.py
src/core/: config.py  exceptions.py  security.py
src/db/: session.py
src/models/: user.py
src/repositories/: user_repository.py
src/schemas/: auth.py
src/services/: auth_service.py
tests/: conftest.py  test_users.py
tests/bdd/: conftest.py  test_auth_bdd.py
tests/bdd/features/: auth.feature
tests/integration/: test_auth_endpoints.py
tests/unit/: test_auth_service.py
